Add external docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,7 @@ networks:
 
 services:
   btc-simnet-node1:
-    # build:
-    #   context: ../.
-    #   dockerfile: Dockerfile
-      ## TO share volumes and avoid permission issues with chain data, fill that args with id -u and id -g
-      ## export UID=$(id -u) && export GID=$(id -g) && docker-compose up --build
-      # args:
-      #   UID: ${UID}   # Pass host UID
-      #   GID: ${GID}   # Pass host GID
-    image: simchainbitcoinnode:29.0
+    image: bitcoin/bitcoin:29.0
     container_name: btc-simnet-node1
     ports:
       - "18443:18443"
@@ -45,15 +37,7 @@ services:
       # - -debug=validation
 
   btc-simnet-node2:
-    # build:
-    #   context: ../.
-    #   dockerfile: Dockerfile
-      ## TO share volumes and avoid permission issues with chain data, fill that args with id -u and id -g
-      ## export UID=$(id -u) && export GID=$(id -g) && docker-compose up --build
-      # args:
-      #   UID: ${UID}   # Pass host UID
-      #   GID: ${GID}   # Pass host GID
-    image: simchainbitcoinnode:29.0
+    image: bitcoin/bitcoin:29.0
     container_name: btc-simnet-node2
     ports:
       - "28443:18443"
@@ -83,15 +67,7 @@ services:
       # - -debug=validation
 
   btc-simnet-node3:
-    # build:
-    #   context: ../.
-    #   dockerfile: Dockerfile
-      ## TO share volumes and avoid permission issues with chain data, fill that args with id -u and id -g
-      ## export UID=$(id -u) && export GID=$(id -g) && docker-compose up --build
-      # args:
-      #   UID: ${UID}   # Pass host UID
-      #   GID: ${GID}   # Pass host GID
-    image: simchainbitcoinnode:29.0
+    image: bitcoin/bitcoin:29.0
     container_name: btc-simnet-node3
     networks:
       - btc-simnet-network
